--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <nav class="navbar">
   <ul>
     <li><a href="#home">Home</a></li>
-    <li><a href="#about">Tentang</a></li>
-    <li><a href="#kontak">Kontak</a></li>
+    <li><a href="#About">Tentang</a></li>
+    <li><a href="#Contact">Kontak</a></li>
   </ul>
 </nav>
 </header>
