--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <h3>Bakso Mercon</h3>
     <p>Bakso Mercon khas dengan rasa pedas yang menggigit</p>
     <p>Harga: <strong>Rp 10.000</strong></p>
-
+  
     <p>Jumlah Beli: <span id="jumlah">0</span></p>
     <div class="quantity-controls">
       <button onclick="kurang()">-</button>
       <button onclick="tambah()">+</button>
     </div>
-
+    <p>Pembayaran Hanya COD</p>
     <br><br>
     <div>
       <button id="orderBtn" class="order-btn">Beli Sekarang</button>
@@ -56,7 +56,7 @@
   <p>Bakso mercon adalah bakso yang diisi dengan cabai rawit, sehingga memiliki tingkat kepedasan yang sangat tinggi. Nama "mercon" berasal dari kata "petasan" dalam bahasa Indonesia, yang menggambarkan sensasi ledakan rasa pedas saat menggigit bakso ini. Bakso mercon merupakan variasi bakso yang populer, terutama di kalangan pecinta pedass</p>
 </div>
 
-<header>
+<footer>
   <div class="contact">
     <a href="https://www.instagram.com/merconrpl2?igsh=Z3NqMXE4MHlpN3M0" target="_blank">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/2048px-Instagram_logo_2022.svg.png" alt="Instagram" width="30">
@@ -76,7 +76,7 @@
     <a href="https://maps.app.goo.gl/Z2h6nu2QhiGZdSJ26" target="_blank">
   <img src="https://static-00.iconduck.com/assets.00/google-maps-old-icon-1024x1024-wcyun7p6.png" alt="Maps" width="30">
 </a>
-
+</footer>
   </div>
 </header>
 
